Fitxer de configuració separat del codi
Per facilitar els desplegaments, els paràmetres de configuració es
defineixen al fitxer config-moodle2.php del directori pare del codi.

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 #
 # See gitignore(5) man page for more details
 #
-/config.php
 /lib/editor/tinymce/extra/tools/temp/
 *~
 *.swp
@@ -36,3 +35,4 @@ composer.lock
 # lib/yuilib/version/module/module-coverage.js
 /lib/yuilib/*/*/*-coverage.js
 atlassian-ide-plugin.xml
+/blocks/configurable_reports/
